# chillguy

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
src/chillguy/: config.py  lyrics.py  main.py  player.py  search.py  ui.py  utils.py
src/chillguy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
