[project]
name = "chillguy"
version = "0.1.0"
description = "A terminal-based YouTube music player designed for simplicity and style."
authors = [{ name = "Nguyen Huy", email = "nguyenhuy158@gmail.com" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "yt-dlp>=2023.10.13",
    "toml>=0.10.2",
    "readchar>=4.0.5",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
chillguy = "chillguy.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
